--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -14,7 +14,7 @@
   <% end %>
 
   <div class="label">
-    <%= form.label "Nome", :class => "label-text" %>
+    <%= form.label :name, :class => "label-text" %>
     <%= form.text_field :name, :class => "input-field", :placeholder => "Obrigatorio"  %>
   </div>
 
