--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 	<i class="material-icons icon">person</i>
 	<span class="user-show-title">Suas informações</span>
 	<div class="information">
-		<span>Email: <%= @user.email %></span>
+		<div>Email: <%= @user.email %></div>
 	</div>
 	<%= link_to 'Editar', edit_user_path(@user), class: "edit-user-button" %>
 	<div id="separate-infos">&nbsp</div>	
