--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -97,6 +97,96 @@
     line-height: 1.3rem;
 }
 
+.comments-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem auto 2rem auto;
+    width: 95%;
+    border-radius: 0.3rem 0 0 0.3rem;
+    background-color: white;
+    margin-top: 0;
+    padding: 1rem 1rem;
+}
+
+#comment-body {
+    width: 100rem;
+    display: none;
+    
+}
+
+textarea {
+    width: 100%;
+    height: 5rem;
+    border-radius: 3px;
+}
+
+.create-comment {
+    width: 50%;
+}
+
+.comment-input {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end
+}
+.comments-title {
+    margin-top: 1rem;
+    font-size: 1.8rem;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.add-comment-button {
+    color: white;
+    background-color: var(--main-color);
+    border: none;
+    padding: 1rem;
+    border-radius: 3px;
+}
+
+.add-comment-button:hover {
+    background-color: var(--main-hover-color);
+}
+
+.comments {
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    background-color: rgb(53, 53, 53);
+    border-radius: 5px;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+    padding-top: 0.8rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    width: 80%;
+}
+
+.all-coments {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.comment-body {
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 0;
+    color: rgb(255, 255, 255);
+}
+
+
+.user-name-comment {
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 0.2rem;
+    margin-left: 0.2rem;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
+    margin-bottom: 0;
+
+}
+
 /* PAGINA SHOW DO USUARIO */
 .user-show-container {
     width: 25rem;
