--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -33,9 +33,13 @@
 </div>
 <div class="comments-container">
   <h2 class="comments-title">Comentários</h2>
-  <div class="create-comment">
-    <%= render partial: 'comments/form', locals: { comment: @comment }, :class => "comment-input" %>
-  </div>
+  <% if current_user %>
+    <div class="create-comment">
+      <%= render partial: 'comments/form', locals: { comment: @comment }, :class => "comment-input" %>
+    </div>
+  <% else %>
+    <p class="not-logged-comment-message">Você precisa estar logado para comentar.</p>
+  <% end %>
   <div class="all-coments">
     <% @comments.each do |comment| %>
       <% comment.donation = @donation %>
