--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -24,7 +24,7 @@
 
 .container {
     display: flex;
-    margin: 2rem auto 2rem auto;
+    margin: 1.5rem auto 0.5rem auto;
     width: 95%;
     border-collapse: collapse;
     align-items: stretch;
@@ -45,6 +45,7 @@
     align-items: flex-start;
     overflow-y: auto;
     overflow-x: auto;
+    margin-right: 0.2rem;
 
 }
 
@@ -101,7 +102,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem auto 2rem auto;
+    margin: 0 auto 2rem auto;
     width: 95%;
     border-radius: 0.3rem 0 0 0.3rem;
     background-color: white;
@@ -185,6 +186,12 @@ textarea {
     font-size: 1.5rem;
     margin-bottom: 0;
 
+}
+
+.not-logged-comment-message {
+    font-size: 1.3rem;
+    margin-bottom: 3rem;
+    font-style: italic;
 }
 
 /* PAGINA SHOW DO USUARIO */
