--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -18,12 +18,19 @@
     </p>
 
     <p class="infos-donation">
-      <%= @donation.street %>
+      <strong>Local de Entrega:</strong>  <%= @donation.street %>
     </p>
 
     <p class="infos-donation">
-      <%= @donation.phone %>, 
-      <%= @donation.email %>
+      <strong>Telefone:</strong>  <%= @donation.phone %> 
+    </p>
+
+    <p class="infos-donation">
+      <strong>Email:</strong>  <%= @donation.email %>
+    </p>
+
+    <p class="description-title">
+      <strong>Descrição da Doação:</strong>
     </p>
 
     <p class="description">
