--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -18,7 +18,7 @@
     </p>
 
     <p class="infos-donation">
-      <strong>Local de Entrega:</strong>  <%= @donation.street %>
+      <strong>Local:</strong>  <%= @donation.street %>
     </p>
 
     <p class="infos-donation">
