--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -113,7 +113,7 @@
     align-items: center;
     margin: 0 auto 2rem auto;
     width: 95%;
-    border-radius: 0.3rem 0 0 0.3rem;
+    border-radius: 0.3rem;
     background-color: white;
     margin-top: 0;
     padding: 1rem 1rem;
@@ -129,6 +129,7 @@ textarea {
     width: 100%;
     height: 5rem;
     border-radius: 3px;
+    resize: none;
 }
 
 .create-comment {
@@ -220,7 +221,7 @@ textarea {
 }
 
 .icon {
-    color: var(--main-color);
+    color: rgb(51, 51, 51);
     font-size: 10rem!important;
 }
 
