--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
 
   <div class="label">
-    <%= form.label "Endereço", :class => "label-text" %>
+    <%= form.label "Endereço de entrega", :class => "label-text" %>
     <%= form.text_field :street, :class => "input-field" %>
   </div>
 
