--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,6 @@
   <% if comment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
-
       <ul>
       <% comment.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,12 +10,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="comment-field">
     <%= form.text_area :body, :placeholder => "Faça um comentário..." %>
   </div>
 
   <%= form.hidden_field :donation_id %>
-  <div class="actions">
+  <div class="add-comment-field">
     <%= form.submit "Comentar", :class => "add-comment-button" %>
   </div>
 <% end %>
