Fix donation#index problem when searching

--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -6,18 +6,18 @@
 
 <div class="donations">
     <% @donations.each do |donation| %>
-      <div class="donation">
-        <div class="donation-image-cont">
-          <% if donation.images.attached? %>
-            <%= image_tag(donation.images[0], :class => "image") %>
-          <% else %>
-          <%= image_tag("https://image.flaticon.com/icons/svg/149/149092.svg", :class => "no-image") %>
-          <% end %>
-        </div>
-        <div class="donation-about">
-          <h2><%= donation.title%></h2>
-          <p><%=donation.description%></p>
-        </div>
-      </div>
+      <%= link_to donation_path(donation), :class => "donation-each" do %>
+          <div class="donation-image-cont">
+            <% if donation.images.attached? %>
+              <%= image_tag(donation.images[0], :class => "image") %>
+            <% else %>
+            <%= image_tag("https://image.flaticon.com/icons/svg/149/149092.svg", :class => "no-image") %>
+            <% end %>
+          </div>
+          <div class="donation-about">
+            <h2><%= donation.title%></h2>
+            <p><%=donation.description%></p>
+          </div>
+      <% end %>
     <% end %>
 </div>
