--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -3,6 +3,14 @@
   --main-white: #F6F6FF;
 }
 
+.home-title {
+	font-family: 'Montserrat', sans-serif;
+	color: var(--main-color);
+	text-align: center;
+	font-size: 3rem;
+	margin: 1rem 0 1rem 0;
+}
+
 .donation-list {
 	width: 100%;
 	margin: 0;
@@ -11,7 +19,6 @@
 	flex-wrap: wrap;
 	font-family: 'Montserrat', sans-serif;
 	justify-content: space-around;
-	margin-top: 2rem;
 	margin-bottom: 2rem;
 }
 
@@ -72,5 +79,20 @@
 }
 
 .donation-description p {
+	margin: 0;
+}
+
+.home-info {
+	padding: 0 1rem 1rem 1rem;
+	margin-bottom: 0.5rem;
+}
+
+.home-info h2 {
+	font-family: 'Montserrat', sans-serif;
+	margin: 0.5rem 0;
+}
+
+.home-info p {
+	font-family: 'Montserrat', sans-serif;
 	margin: 0;
 }
