--- a/app/assets/stylesheets/donations.css
+++ b/app/assets/stylesheets/donations.css
@@ -19,21 +19,6 @@
 	margin: 1rem 0 1rem 0;
 }
 
-.don-button {
-	text-decoration: none;
-	background-color: var(--main-color);	
-	color: var(--main-background-color);
-	font-size: 1.4rem;
-	border-radius: 1.5rem;
-	width: 6.5rem;
-	margin: 0 auto 1rem auto;
-	padding: 0.4rem;
-}
-
-.don-button:hover {
-	background-color: var(--main-hover-color);
-}
-
 .donations {
 	margin: 0 0 1rem 0;
 	width: 100%;
@@ -42,6 +27,13 @@
 	justify-content: space-around;
 	flex-wrap: wrap;
 	font-family: 'Montserrat', sans-serif;
+}
+
+.no-donations-search {
+	font-size: 1.5rem;
+	font-family: 'Montserrat', sans-serif;
+	margin: 0.5rem 0;
+	color: #9e9e9e;
 }
 
 .donation {
