--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -22,6 +22,13 @@
 	margin-bottom: 2rem;
 }
 
+.no-donations-home {
+	font-size: 1.5rem;
+	font-family: 'Montserrat', sans-serif;
+	margin: 0.5rem 0;
+	color: #9e9e9e;
+}
+
 .donation-each {
 	width: 18rem;
 	height: 23rem;
