--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -22,6 +22,14 @@
     box-shadow: 0px 7px 62px -16px rgba(0,0,0,0.68);
 }
 
+.login-form p {
+	text-align: center;
+	font-size: 0.8rem;
+	margin: 0;
+	font-family: 'Montserrat', sans-serif;
+	color: #fe4141;
+}
+
 .title-user {
 	text-align: center;
 	color: var(--main-color);
