--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -39,28 +39,31 @@ div {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: #fe4141;
   display: table;
+  min-width: 100%;
+  max-width: 100%;
 }
 
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
+  width: 100%;
+  border: 2px solid #fe4141;
   padding: 7px 7px 0;
-  margin-bottom: 20px;
   background-color: #f0f0f0;
 
   h2 {
-    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
     font-size: 12px;
     margin: -7px -7px 0;
-    background-color: #c00;
+    background-color: #fe4141;
     color: #fff;
   }
 
   ul li {
+    font-family: 'Montserrat', sans-serif;
     font-size: 12px;
     list-style: square;
   }
