--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -289,6 +289,13 @@ textarea {
     font-family: 'Montserrat', sans-serif;
 }
 
+.no-donations-user {
+    font-size: 1.5rem;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0.5rem 0;
+    color: #9e9e9e;
+}
+
 .user-donation-container {
     display: flex;
     flex-direction: column;
