--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -5,7 +5,7 @@
 
 .home-title {
 	font-family: 'Montserrat', sans-serif;
-	color: var(--main-color);
+	color: rgb(68, 68, 68);
 	text-align: center;
 	font-size: 3rem;
 	margin: 1rem 0 1rem 0;
@@ -30,8 +30,8 @@
 }
 
 .donation-each {
-	width: 18rem;
-	height: 23rem;
+	width: 15rem;
+    height: 20rem;
 	padding: 1rem;
 	background-color: white;
 	border-radius: 0.3rem;
@@ -101,5 +101,6 @@
 
 .home-info p {
 	font-family: 'Montserrat', sans-serif;
-	margin: 0;
+	margin: 0 5rem 1rem 0;
+	font-style: italic;
 }
