--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,31 +1,35 @@
-<p id="notice"><%= notice %></p>
+<%= render partial: "/shared/nav" %>
 
-<h1>Comments</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Body</th>
-      <th>User</th>
-      <th>Donation</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @comments.each do |comment| %>
+<% if current_user && current_user.email == "admin@doaki.com" %>
+  <h1>Comments</h1>
+  <table>
+    <thead>
       <tr>
-        <td><%= comment.body %></td>
-        <td><%= comment.user %></td>
-        <td><%= comment.donation %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Body</th>
+        <th>User</th>
+        <th>Donation</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @comments.each do |comment| %>
+        <tr>
+          <td><%= comment.body %></td>
+          <td><%= comment.user %></td>
+          <td><%= comment.donation %></td>
+          <td><%= link_to 'Show', comment %></td>
+          <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
+          <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Comment', new_comment_path %>
+  <br>
+
+  <%= link_to 'New Comment', new_comment_path %>
+
+<% else %>
+  <%= render partial: "shared/blocked-page"%>
+<% end %>
