--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -18,6 +18,7 @@
     -khtml-user-drag: none;
     -moz-user-drag: none;
     -o-user-drag: none;
+    margin:auto;
     height: 22rem;
     width: 22rem;
 }
