--- a/app/assets/stylesheets/donations.css
+++ b/app/assets/stylesheets/donations.css
@@ -2,6 +2,7 @@
   --main-color: #1D84B5;
   --main-hover-color: #34699a;
   --main-background-color: #F6F6FF;
+  --main-letter-color: color: rgb(68, 68, 68);;
 }
 
 .donations-header {
@@ -14,7 +15,7 @@
 }
 
 .title {
-	color: var(--main-color);
+	color: var(--main-letter-color);
 	font-size: 3rem;
 	margin: 1rem 0 1rem 0;
 }
