Puts a notice in donation form edit

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -61,6 +61,13 @@
 	font-weight: bold;
 }
 
+.aviso-imagens {
+	text-align: left;
+	margin: 0;
+	font-size: 0.65rem;
+	color: #fe4141;
+}
+
 .input-description {
 	font-size: 12px;
 	max-width: 100%;
