Add gem to be able to use the assert_template method, refactor some routes and controllers to handle properly with assertions, add admin functionality, add seeds to seed admin user, finish test for pages and comments controller (unit and integration), add helper testing methods in test_helper.rb and delete yml fixtures replaced by db seeds

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -19,7 +19,7 @@
     <ul class="nav-buttons-list">
         <% if current_user %>
             <%= link_to 'DOAR',  new_donation_path, :class => "nav-buttons" %>
-            <%= link_to 'Sair', logout_path, :class => "nav-buttons" %>
+            <%= link_to 'Sair', logout_path, method: :delete, :class => "nav-buttons" %>
             <span class="profile-span">
                 <%= link_to user_path(current_user.id), :class => "profile-hyperlink" do %>
                     <i class="material-icons md-36 profile-icon">account_circle</i>
