--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,7 +27,7 @@
 
   <br>
 
-  <%= link_to 'New User', new_user_path %>
+  <%= link_to 'New User', signup_path %>
 <% else %>
   <%= render partial: "shared/blocked-page"%>
 <% end %>
